--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/assets/css/nucleo-icons.css",
               "src/assets/css/nucleo-svg.css",
               "src/assets/css/material-dashboard.css"
@@ -37,7 +38,7 @@
               "src/assets/js/core/bootstrap.min.js",
               "src/assets/js/plugins/perfect-scrollbar.min.js",
               "src/assets/js/plugins/smooth-scrollbar.min.js",
-              "src/assets/js/material-dashboard.min.js"
+              "src/assets/js/material-dashboard.js"
             ]
           },
           "configurations": {
