--- a/angular.json
+++ b/angular.json
@@ -39,8 +39,7 @@
               "src/assets/js/core/bootstrap.min.js",
               "src/assets/js/plugins/perfect-scrollbar.min.js",
               "src/assets/js/plugins/smooth-scrollbar.min.js",
-              "src/assets/js/material-dashboard.js",
-              "./node_modules/moment/moment.js"
+              "src/assets/js/material-dashboard.js"
             ]
           },
           "configurations": {
