--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "moment": "^2.29.3",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.17",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
