--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+    "bootstrap-select": "^1.13.18",
     "moment": "^2.29.3",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
